# book_keeping_rust_backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: main.rs
src/auth/: mod.rs
src/controllers/: auth.rs  authors.rs  books.rs  mod.rs
src/db/: mod.rs
src/entities/: mod.rs
src/fairings/: cors.rs
src/migrator/: m20220101_000001_create_user_table.rs  m20240514_171241_create_author_table.rs  m20240514_173606_create_book_table.rs  mod.rs
