[package]
name = "book_keeping"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
dotenvy = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.12", features = [ 'sqlx-mysql', 'runtime-async-std-native-tls', "macros" ] }
sea-orm-migration = "0.12"
